--- a/Movie_project.ipynb
+++ b/Movie_project.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis of 2018 & 2019 Movies "
+    "# Exploratory Data Analysis of 2018 & 2019 Movies \n",
+    "Clare Blessen & Melissa Munz"
    ]
   },
   {
